--- a/shippable.yml
+++ b/shippable.yml
@@ -10,8 +10,6 @@ python:
   - 3.4
  # - pypy
 
-
-
 before_install:
   - source ~/.rvm/scripts/rvm && rvm use 1.9.2
   
@@ -40,5 +38,5 @@ notifications:
 
 #test
 #cache: true 
-parallelized_test : true
-commit_container: buildsample/sample_python
+#parallelized_test : true
+#commit_container: buildsample/sample_python
