--- a/shippable.yml
+++ b/shippable.yml
@@ -5,14 +5,18 @@ language: python
 python:
   - 2.6
   - 2.7
-  - 3.2
+#  - 3.2
   - 3.3
-  - 3.4
-  - pypy
+ # - 3.4
+#  - pypy
 
 
 before_install:
   - source ~/.rvm/scripts/rvm && rvm use 1.9.2
+  
+env:
+ - FOO=foo BAR=bar
+ - FOO=bar BAR=foo
   
 #install:
  # - pip install -r requirements.txt
