--- a/shippable.yml
+++ b/shippable.yml
@@ -6,13 +6,13 @@ python:
   - 2.6
   - 2.7
 #  - 3.2
-  - 3.3
- # - 3.4
+ # - 3.3
+  - 3.4
 #  - pypy
 
 
-before_install:
-  - source ~/.rvm/scripts/rvm && rvm use 1.9.2
+#before_install:
+ # - source ~/.rvm/scripts/rvm && rvm use 1.9.2
   
 env:
  - FOO=foo BAR=bar
@@ -26,6 +26,7 @@ before_script:
   - mkdir -p shippable/testresults
   - mkdir -p shippable/codecoverage
   - git --version
+  - python --version
 
 script:
   - nosetests test.py --with-xunit --xunit-file=shippable/testresults/nosetests.xml
